@@ -13,20 +13,20 @@ import org.apache.oltu.oauth2.common.validators.AbstractValidator;
 import de.ids_mannheim.korap.oauth2.constant.OAuth2Error;
 
 /**
- * Defines required parameters for revoking a refresh token via a
- * super client
+ * Defines required request parameters for
+ * OAuth2RevokeAllTokenSuperRequest and validates the request method.
  * 
  * @author margaretha
  *
  */
-public class RevokeTokenSuperValidator
+public class RevokeAllTokenSuperValidator
         extends AbstractValidator<HttpServletRequest> {
 
     public static final String SUPER_CLIENT_ID = "super_client_id";
     public static final String SUPER_CLIENT_SECRET = "super_client_secret";
 
-    public RevokeTokenSuperValidator () {
-        requiredParams.add("token");
+    public RevokeAllTokenSuperValidator () {
+        requiredParams.add(OAuth.OAUTH_CLIENT_ID);
         requiredParams.add(SUPER_CLIENT_ID);
         requiredParams.add(SUPER_CLIENT_SECRET);
 
