@@ -26,6 +26,9 @@
    - Added a service to list active refresh tokens of a user (margaretha)
    - Added username filtering to token revocation service via super client 
      (margaretha)
+26/11/2019
+   - Added a service to revoke a single refresh token via super client 
+     (margaretha)  
 
 # version 0.62.1
 08/07/2019
@@ -37,7 +40,8 @@
      (margaretha)
    - Fixed post requests with status OK and empty body (margaretha)
 07/08/2019
-   - Resolved #40 (margaretha)
+   - Added users to hidden group when searching in a published VC (margaretha, 
+     resolved #40)
 15/08/2019
    - Updated the response statuses of VC PUT requests (margaretha)
 
